--- a/server/.sequelizerc
+++ b/server/.sequelizerc
@@ -4,8 +4,8 @@ require("babel-register");
 const path = require('path');
 
 module.exports = {
-  'config': path.resolve('config', 'config/db.js'),
-  'models-path': path.resolve('models'),
-  'seeders-path': path.resolve('seeders'),
-  'migrations-path': path.resolve('migrations')
-}
+  'config': path.resolve('db', 'database.js'),
+  'models-path': path.resolve('db', 'models'),
+  'seeders-path': path.resolve('db', 'seeders'),
+  'migrations-path': path.resolve('db', 'migrations')
+};
