--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
     "debug": "~2.6.9",
     "dotenv": "^16.0.3",
     "express": "~4.16.1",
+    "jsonwebtoken": "^8.5.1",
     "morgan": "~1.9.1",
     "pg": "^8.8.0",
     "pg-hstore": "^2.3.4",
