Добален лид тип

--- a/server/.env_example
+++ b/server/.env_example
@@ -1,6 +1,6 @@
-PORT=3000
-DB_NAME=gravitoncrm
-DB_USER=garegin
-DB_PASSWORD=123
+PORT=3010
+DB_NAME=graviton_crm
+DB_USER=postgres
+DB_PASSWORD=1
 SALTROUNDS=10
 TOKEN_SECRET=hdhfjbskjbcdsjkvbskjvbkjwvbiuiuf
