--- a/server/package.json
+++ b/server/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node app.js"
+    "start": "node app.js",
+    "lint": "eslint --ext .js --ignore-path .gitignore ."
   },
   "dependencies": {
     "bcrypt": "^5.1.0",
@@ -21,12 +22,12 @@
   "main": "app.js",
   "author": "",
   "license": "ISC",
-  "description": "",
   "devDependencies": {
     "babel-register": "^6.26.0",
     "eslint": "^8.29.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.26.0",
     "sequelize-cli": "^6.5.2"
-  }
+  },
+  "description": ""
 }
